@@ -89,7 +89,8 @@ See also the documentation on
 <a href="virtual-host.html">Virtual Hosts</a>,
 <a href="host.html">Non-IP virtual hosts</a>,
 <a href="mod/core.html#bindaddress">BindAddress directive</a>,
-<a href="mod/core.html#port">Port directive</a>
+<a href="mod/core.html#port">Port directive</a>,
+<a href="dns-caveats.html">DNS Issues</a>
 and
 <a href="mod/core.html#virtualhost">&lt;VirtualHost&gt; section</a>.
 </ul>
